Calendar: Events navigation

--- a/components/events/default.htm
+++ b/components/events/default.htm
@@ -1,7 +1,7 @@
 <div class="calendar-events">
 
     {% for event in events %}
-        {{ event.name }}<br>
+        <a href="{{ event.url }}">{{ event.name }}</a><br>
     {% endfor %}
 
 </div>
