--- a/components/events/default.htm
+++ b/components/events/default.htm
@@ -7,26 +7,26 @@
         {% if event.date != date %}
             {% set date = event.date %}
 
-            <h2>{{ event.begins_at | date("l, F j") }}</h2>
+            <h2>{{ event.begins_at|date("l, F j") }}</h2>
         {% endif %}
 
         <article class="event">
             <header>
-                <h3>
+                <h1>
                     <a href="{{ event.url }}">{{ event.name }}</a>
-                </h3>
-                <div class="event__location">
+                </h1>
+                <h2 class="event__location">
                     {{ event.venue_name }}, {{ event.city_name }}
-                </div>
+                </h2>
             </header>
 
             <p class="event__info">
                 {{ event.info }}
             </p>
 
-            <small class="meta event__meta">
+            <p class="meta event__meta">
                 {{ event.music }}
-            </small>
+            </p>
         </article>
 
     {% endfor %}
