Calendar: Use BBCode

--- a/components/events/default.htm
+++ b/components/events/default.htm
@@ -21,7 +21,7 @@
             </header>
 
             <p class="event__info">
-                {{ event.info }}
+                {{ event.info | bbcode }}
             </p>
 
             <p class="meta event__meta">
