--- a/components/eventlist/default.htm
+++ b/components/eventlist/default.htm
@@ -1,5 +1,5 @@
 <section class="events events--list">
-    <h2>{{ __SELF__.title }}</h2>
+    <h2>{{ __SELF__.title|_ }}</h2>
 
     <ol>
         {% for event in __SELF__.events %}
