--- a/components/events/pagination.htm
+++ b/components/events/pagination.htm
@@ -1,3 +1,5 @@
-<a href="{{ pagination.previousUrl }}">{{ pagination.previousText }}</a>
--
-<a href="{{ pagination.nextUrl }}">{{ pagination.nextText }}</a>
+<div class="pagination">
+    <a class="pagination__previous" href="{{ pagination.previousUrl }}">{{ pagination.previousText }}</a>
+    -
+    <a class="pagination__next"  href="{{ pagination.nextUrl }}">{{ pagination.nextText }}</a>
+</div>
