--- a/components/events/pagination.htm
+++ b/components/events/pagination.htm
@@ -1,5 +1,5 @@
 <div class="pagination">
-    <a class="pagination__previous" href="{{ pagination.previousUrl }}">{{ pagination.previousText }}</a>
+    <a class="pagination__previous" href="{{ pagination.previousUrl }}">&laquo; {{ pagination.previousText }}</a>
     -
-    <a class="pagination__next"  href="{{ pagination.nextUrl }}">{{ pagination.nextText }}</a>
+    <a class="pagination__next"  href="{{ pagination.nextUrl }}">{{ pagination.nextText }} &raquo;</a>
 </div>
