Use full width event listing

--- a/components/events/default.htm
+++ b/components/events/default.htm
@@ -1,6 +1,6 @@
 {% set date = null %}
 
-<section class="events events--detailed">
+<section class="full events events--detailed">
 
     {% for event in events %}
 
