--- a/components/events/default.htm
+++ b/components/events/default.htm
@@ -13,7 +13,9 @@
         <article class="event media">
             {% spaceless %}
             <div class="media__image">
-                {% if event.flyer_url %}
+                {% if event.flyers|length %}
+                    <img src="{{ event.flyers.first.image.path }}" alt="">
+                {% elseif event.flyer_url %}
                     <img src="{{ event.flyer_url }}" alt="">
                 {% endif %}
             </div>
