Comments and legacy image

--- a/components/event/header.htm
+++ b/components/event/header.htm
@@ -36,7 +36,7 @@
         {% partial __SELF__~"::favorites" %}
     </p>
 
-    <nav>
+    <nav class="actions">
         <span id="favorite-button">
             {% partial __SELF__~"::favorite" %}
         </span>
